package aula07.Ex1;

public interface EmployeeInterface {

    //when employee start working
    public void start(String date);

    //when employee end their work
    public void terminate(String date);

    //when employee working
    public void work();

}
