@startuml

title __EX1's Class Diagram__\n

  package aula07.Ex1 {
    class Employee {
        - name : String
        + Employee()
        + start()
        + terminate()
        + work()
    }
  }
  

  package aula07.Ex1 {
    abstract class EmployeeDecorator {
        + EmployeeDecorator()
        + start()
        + terminate()
        + work()
    }
  }
  

  package aula07.Ex1 {
    interface EmployeeInterface {
        {abstract} + start()
        {abstract} + terminate()
        {abstract} + work()
    }
  }
  

  package aula07.Ex1 {
    class Manager {
        + Manager()
        + start()
        + terminate()
        + work()
        + manage()
    }
  }
  

  package aula07.Ex1 {
    class TeamLeader {
        + TeamLeader()
        + start()
        + terminate()
        + work()
        + plan()
    }
  }
  

  package aula07.Ex1 {
    class TeamMember {
        + TeamMember()
        + start()
        + terminate()
        + work()
        + colaborate()
    }
  }
  

  package aula07.Ex1 {
    class TestDecorator {
        {static} + main()
    }
  }
  

  Employee -up-|> EmployeeInterface
  EmployeeDecorator -up-|> EmployeeInterface
  EmployeeDecorator o-- EmployeeInterface : employee
  Manager -up-|> EmployeeDecorator
  TeamLeader -up-|> EmployeeDecorator
  TeamMember -up-|> EmployeeDecorator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
